USE $newVersion$ ABBREVIATION TO INSERT NEW VERSION
Version naming system:
Number 1: (0-3) indev/alpha/beta/release
Number 2: major updates
Number 3: minor updates
Number 4: bugfixes/hotfixes/small changes

??-??-??_??_2023
v0.0.0.0
-Transportation of Box2D objects between client and server

2-10am-25_08_2023
v0.0.0.1
-Start of the ECS put in place
-Bug fixed where shapes weren't being rasterized properly in BodyMap

6-35pm-26_08_2023
v0.0.1.0
-Ashley ECS fully implemented
-Updates in BodyMap

10-31pm-26_08_2023
v0.0.1.1
-Fixed bug relating to BodyMap#checkIfRefreshBody

5-30pm-27_08_2023
v0.0.1.2
-Refactoring
-Incorporating MyMap into code