@@ -35,9 +35,6 @@ allprojects {
 }
 
 project(":client:desktop") {
-    def date = new Date().format('ss-mm-HH-dd-MM-yyyy')
-    buildDir = new File(rootProject.projectDir, 'builds/client/desktop-$')
-
     apply plugin: "java-library"
 
     dependencies {
@@ -61,9 +58,6 @@ project(":client:desktop") {
 }
 
 project(":client:android") {
-    def date = new Date().format('ss-mm-HH-dd-MM-yyyy')
-    buildDir = new File(rootProject.projectDir, 'builds/client/android/build-$date')
-
     apply plugin: "com.android.application"
 
     configurations { natives }
@@ -129,9 +123,6 @@ project(":client:core") {
 }
 
 project(":server:game") {
-    def date = new Date().format('ss-mm-HH-dd-MM-yyyy')
-    buildDir = new File(rootProject.projectDir, "builds/client/desktop/build-$date")
-
     apply plugin: "java-library"
 
     dependencies {
@@ -176,8 +167,8 @@ project(":shared") {
     }
 }
 
-
-def buildName =  "build-" + new Date().format('h-mma-dd_MM_yyyy')
+def date = new Date().format('dd_MM_yyyy-HH-mm')
+def buildName =  "build-" + date
 
 task buildAndroid(type: GradleBuild) {
     dir = file('client/android')
@@ -203,8 +194,7 @@ task makeNewVersion {
 
     doLast {
         def changelogFile = file('CHANGELOG.txt')
-        def time = new Date().format('h-mma-dd_MM_yyyy')
         def version = 'v_._._._'
-        changelogFile.append("\n${time}\n${version}\n")
+        changelogFile.append("\n${date}\n${version}\n")
     }
 }
