@@ -7,7 +7,7 @@ import com.badlogic.gdx.graphics.OrthographicCamera;
 import com.badlogic.gdx.physics.box2d.Box2DDebugRenderer;
 import com.badlogic.gdx.utils.ScreenUtils;
 import com.hasanchik.game.MyClientGame;
-import com.hasanchik.game.map.MyMapRenderer;
+import com.hasanchik.game.map.InfiniteEntityMapRenderer;
 import com.hasanchik.game.networking.ClientNetworkingHandler;
 import com.hasanchik.game.utils.GDXDialogsFacade;
 import com.hasanchik.shared.box2dutils.WorldHandler;
@@ -20,7 +20,7 @@ public class GameScreen extends AbstractScreen {
     private static final Logger logger = LogManager.getLogger(GameScreen.class);
 
     private final Box2DDebugRenderer box2DDebugRenderer = new Box2DDebugRenderer();
-    private final MyMapRenderer myMapRenderer;
+    private final InfiniteEntityMapRenderer mapRenderer;
     private final AssetManager assetManager;
     private final OrthographicCamera camera;
 
@@ -28,7 +28,7 @@ public class GameScreen extends AbstractScreen {
     public GameScreen(MyClientGame context) {
         super(context);
         this.camera = context.getCamera();
-        this.myMapRenderer = new MyMapRenderer(camera, BOX2D_UNIT_SCALE, context.getSpriteBatch());
+        this.mapRenderer = new InfiniteEntityMapRenderer(camera, BOX2D_UNIT_SCALE, context.getSpriteBatch());
         this.assetManager = context.getAssetManager();
 
         this.worldHandler = context.getMap().getWorldHandler();
@@ -37,7 +37,7 @@ public class GameScreen extends AbstractScreen {
 
     @Override
     public void show() {
-        myMapRenderer.setMap(assetManager.get("assets/maps/map.json"));
+        mapRenderer.setMap(assetManager.get("assets/maps/map.json"));
     }
 
     public void onConnectionClosed() {
@@ -58,8 +58,8 @@ public class GameScreen extends AbstractScreen {
             ClientNetworkingHandler.getInstanceIfExists().closeConnection();
         }
 
-        myMapRenderer.setView(camera);
-        myMapRenderer.render();
+        mapRenderer.setView(camera);
+        mapRenderer.render();
     }
 
     @Override
